Fixed container layout bug

--- a/src/scss/folder.scss
+++ b/src/scss/folder.scss
@@ -78,13 +78,12 @@
     align-items: flex-start; //important
     flex-grow: 1;
     overflow-y: auto;
-    background-color: red;
 }
 
 .folder__files-container {
     padding: 5px;
+    display: flex;
     flex-wrap: wrap;
-    background-color: green;
 }
 
 .folder__file-info-panel {
